[package]
name = "rlp-decoder"
version = "0.1.0"
description = "Recursive-length prefix data decoder"
repository = ""
license = "MIT OR Apache-2.0"
authors = [""]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }

[dev-dependencies]
bytes = { version = "1", default-features = false }
criterion = "0.5.1"
hex-literal = "0.4.1"
primitive-types = { version = "0.13", features = ["impl-rlp"] }
rlp = "0.6.1"

[features]
default = ["std"]
std = ["rustc-hex/std"]
